--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 hostfile = hosts
-remote_user = centos
+remote_user = jayakrishnan
 private_key_file = /root/id_rsa
 host_key_checking = False
